test/error/ConstructorStatic.ci
public class Test
{
	public static Test() { //ERROR: Constructor cannot be static
	}
}
